added a bunch of navigational stuff
we have a user admin interface now
user groups model is adding, interface bits to come
now have a function for menus to add a search box
added an admin menu page to house all admin links

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,11 +4,13 @@
   <tr>
     <th>Category</th>
     <th></th>
+    <th></th>
   </tr>
 
 <% @categories.each do |category| %>
   <tr>
     <td><%= category.name %></td>
+    <th><%= link_to pluralize(category.content_pages.count, 'page'), category %></th>
     <td><%= link_to 'Delete', category, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
