--- a/app/views/content_pages/edit.html.erb
+++ b/app/views/content_pages/edit.html.erb
@@ -22,4 +22,8 @@
 
 <br/>
 
-<p>[<%= link_to 'Back to List of Pages', content_pages_path %>]</p>
+<p class="admin_links">
+  <%= link_to 'Create a New Page', new_content_page_path %> |
+  <%= link_to 'List of Pages', content_pages_path %> |
+  <%= link_to 'List of Categories', categories_path %>
+</p>
