--- a/app/views/content_pages/index.html.erb
+++ b/app/views/content_pages/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Content Pages</h1>
 
+<% if @search_phrase %>
+  <h4>Search query: <%= @search_phrase %></h4>
+<% end %>
+
 <table cellspacing="2px" cellpadding="0" class="nice_table">
   <tr>
     <th style="white-space:nowrap;">Page Name</th>
@@ -11,21 +15,24 @@
 <% @content_pages.each do |content_page| %>
   <tr>
     <td><%=h content_page.name %></td>
-    <td><%= truncate strip_tags(content_page.body), :length => 200 %></td>
+    <td><%= @search_phrase ? highlight(excerpt(strip_tags(content_page.body), @search_phrase), @search_phrase) :
+                truncate(strip_tags(content_page.body), :length => 200) %></td>
     <td><%=h content_page.categories.map(&:name).join(', ') %></td>
     <td style="white-space:nowrap;">
-      <%= link_to 'view', content_page %> |
-      <%= link_to 'edit', edit_content_page_path(content_page) %> |
-      <%= link_to 'delete', content_page, :confirm => "Are you sure you want to permanently delete this page (#{content_page.name})?",
-              :method => :delete %>
+      <%= link_to 'view', content_page %>
+      <% if current_user.is_admin? %> |
+        <%= link_to 'edit', edit_content_page_path(content_page) %> |
+        <%= link_to 'delete', content_page, :confirm => "Are you sure you want to permanently delete this page (#{content_page.name})?",
+                :method => :delete %>
+      <% end %>
     </td>
   </tr>
 <% end %>
 </table>
 
-
+<% if current_user.is_admin? %>
 <p class="admin_links">
   <%= link_to 'Create a New Page', new_content_page_path %> |
-  <%= link_to 'List of Categories', categories_path %> |
-  <%= link_to 'Site Settings', site_settings_path %>
+  <%= link_to 'List of Categories', categories_path %>
 </p>
+<% end %>
