--- a/app/views/themes/css_editor.html.erb
+++ b/app/views/themes/css_editor.html.erb
@@ -14,10 +14,8 @@
 
 
 <p class="admin_links">
-  <%= link_to 'Site Settings', site_settings_path %> |
-  <%= link_to 'Theme/Styling', :controller => :themes %> |
-  <%= link_to 'List of Pages', content_pages_path %> |
-  <%= link_to 'List of Categories', categories_path %>
+  <%= link_to 'Site Administration', admin_site_settings_path %> |
+  <%= link_to 'Theme/Styling', :controller => :themes %> 
 </p>
 
 
