--- a/themes/layouts/default.html.erb
+++ b/themes/layouts/default.html.erb
@@ -6,13 +6,13 @@
   </div>
 
   <div class="span-6">
-    <div><%= logo_image %></div>
+    <div class="logo_box"><%= logo_image %></div>
 
     <div class="side_menu bg_palette_5 border_palette_5 text_palette_8">
       <%= side_menu %>
     </div>
     <br/><br/><br/>
-    <div class="side_menu bg_palette_5 border_palette_5 text_palette_8" >
+    <div class="side_menu bg_palette_5 border_palette_5 text_palette_8 user_box">
       <%= user_box %>
     </div>
 
