--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,9 @@
       <%= javascript_include_tag 'jquery-1.3.2.min' %>
     <% end %>
     <script type="text/javascript" src="/ckeditor/ckeditor.js"></script>
-    <%= javascript_include_tag 'jquery.string.1.0-min', 'lowpro.jquery' %>
+    <%= javascript_include_tag 'jquery.tablesorter.min', 'jquery.string.1.0-min', 'lowpro.jquery' %>
+    <link rel="stylesheet" href="/tablesorter/blue/style.css" type="text/css" media="screen"/>
+
     <%= yield :javascript %>
   </head>
   <body>
