--- a/app/views/wiki_pages/index.html.erb
+++ b/app/views/wiki_pages/index.html.erb
@@ -26,7 +26,7 @@
     </td>
 
     <td style="width:410px; vertical-align:top">
-      <div id="flashcontent">It seems you don't have Flash installed...</div>
+      tad cloud goes here
     </td>
   </tr>
 </table>
