--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -30,7 +30,8 @@
 <% if is_admin? %>
   <p class="admin_links">
     <%= link_to 'List of Pages', content_pages_path %> |
-    <%= link_to 'List of Categories', categories_path %>
+    <%= link_to 'List of Categories', categories_path %> |
+    <%= link_to "Create a New Page in <em>#{@category.name}</em>", new_content_page_path(:category_id => @category.id) %>
   </p>
 <% end %>
 
