--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,9 @@
     <%= javascript_include_tag 'jquery.tablesorter.min', 'jquery.string.1.0-min', 'lowpro.jquery' %>
     <link rel="stylesheet" href="/tablesorter/blue/style.css" type="text/css" media="screen"/>
 
+    <link type="text/css" href="/stylesheets/smoothness/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
+		<script type="text/javascript" src="/javascripts/jquery-ui-1.7.2.custom.min.js"></script>
+
     <%= yield :javascript %>
   </head>
   <body>
