--- a/app/views/content_pages/index.html.erb
+++ b/app/views/content_pages/index.html.erb
@@ -9,6 +9,7 @@
     <tr>
       <th>Page</th>
       <th>Body (excerpt)</th>
+      <th style="white-space:nowrap;">Pub. Date &nbsp; &nbsp; </th>
       <th>Categories</th>
       <% if is_admin? %><th></th><% end %>
     </tr>
@@ -16,15 +17,18 @@
   <tbody>
     <% @content_pages.each do |content_page| %>
       <tr>
-        <td style="width:20%;"><%= link_to content_page.name, content_page %></td>
+        <td style="width:20%;"><%= link_to truncate(content_page.name, :length => 75), content_page %></td>
         <td><%= @search_phrase ? highlight(excerpt(strip_tags(content_page.body), @search_phrase, :radius => 75), @search_phrase) :
                     truncate(strip_tags(content_page.body), :length => 150) %></td>
+        <td><%= content_page.publish_on ? content_page.publish_on.strftime('%m/%d/%Y') : '' %></td>
         <td><%= content_page.categories.map { |cat| link_to cat.name, cat }.join(', ') %></td>
         <% if is_admin? %>
-          <td style="white-space:nowrap;">
-            <%= link_to 'edit', edit_content_page_path(content_page) %> |
-            <%= link_to 'delete', content_page, :confirm => "Are you sure you want to permanently delete this page (#{content_page.name})?",
-                    :method => :delete %>
+          <td>
+            <%= link_to '<span class="ui-icon ui-icon-document"/>', edit_content_page_path(content_page),
+                    :title => "click to edit" %>
+            <%= link_to '<span class="ui-icon ui-icon-closethick"/>', content_page,
+                    :confirm => "Are you sure you want to permanently delete this page (#{content_page.name})?",
+                    :method => :delete, :title => "click to delete" %>
           </td>
         <% end %>
       </tr>
@@ -43,7 +47,7 @@
 <script type="text/javascript">
 $(document).ready(function()
   {
-    $(".nice_table").tablesorter( { widgets: ['zebra'] });
+    $(".nice_table").tablesorter( { widgets: ['zebra'], headers: { 1:{sorter: false}, 4:{sorter: false}} });
   }
 );
 </script>
