--- a/app/views/wiki_pages/chatter.html.erb
+++ b/app/views/wiki_pages/chatter.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => "top_links" %>
+
 <h1><%= link_to "Wiki", wiki_page_show_home_path %>: Recent Comments</h1>
 
 <% for comment in @comments %>
