--- a/app/views/wiki_pages/_wiki_page_table.html.erb
+++ b/app/views/wiki_pages/_wiki_page_table.html.erb
@@ -1,13 +1,17 @@
 <em>click on a header to sort</em>
-<table class="nice_table" id="wiki_pages_table">
-  <tr>
-    <th>&nbsp; Page Title &nbsp; </th>
-    <th>&nbsp; Last Updated &nbsp; </th>
-  </tr>
-<% for wiki_page in @wiki_pages %>
-  <tr>
-    <td><%= link_to wiki_page.title, wiki_page_show_path(:title => wiki_page.url_title) %></td>
-    <td style="text-align:right"><%= wiki_page.updated_at.strftime "%m/%d/%Y" %></td>
-  </tr>
-<% end %>
+<table  class="nice_table tablesorter" id="wiki_pages_table">
+  <thead>
+    <tr>
+      <th>Page Title</th>
+      <th>Last Updated</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% for wiki_page in @wiki_pages %>
+      <tr>
+        <td><%= link_to wiki_page.title, wiki_page_show_path(:title => wiki_page.url_title) %></td>
+        <td style="text-align:right"><%= wiki_page.updated_at.strftime "%m/%d/%Y" %></td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
