--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -188,6 +188,7 @@ table.nice_table td input, table.nice_table td select { font-size: 11px; border:
 /* wiki stuff */
 
 .wiki_page_version { background:white; padding: 12px; border: 1px #999 solid; }
+.wiki_page_version p { text-indent: 0; }
 .wiki_page_body { background:white; padding: 12px; border: 1px #999 solid; }
 .wiki_page_body p { text-indent: 0; }
 .wiki_comments { background:white; padding: 0px 12px; border: 1px #999 solid; }
