fix some bad references that were causing errors

--- a/app/views/user_groups/show.html.erb
+++ b/app/views/user_groups/show.html.erb
@@ -1,6 +1,6 @@
 <h1>User Group: <%= @user_group.name %></h1>
 
-<% unless @user_group.special.empty? %>
+<% unless @user_group.special.blank? %>
 <p>
   <strong>Grants access to:</strong> <%= @user_group.access_string %>
 </p>
